--- a/src/components/CovidTracker.css
+++ b/src/components/CovidTracker.css
@@ -65,3 +65,29 @@ body
 {
     display: flex;
 }
+
+.neons {
+    margin-top: 10rem;
+    text-align: center;
+ }
+ 
+ .neons h2 {
+   font-size: 9rem;
+   text-align: center;
+    font-weight: bold;
+   -webkit-animation: glow 2s ease-in-out infinite alternate;
+   -moz-animation: glow 2s ease-in-out infinite alternate;
+   animation: glow 2s ease-in-out infinite alternate;
+ }
+ 
+ @-webkit-keyframes glow {
+      from {
+       color: #fff;
+     text-shadow: 0 0 10px red, 0 0 20px red, 0 0 30px red, 0 0 40px red, 0 0 50px red, 0 0 60px red, 0 0 70px red, 0 0 90px red;
+   }
+   
+   to {
+      color: gray;
+     text-shadow: 0 0 20px red, 0 0 30px red, 0 0 40px red, 0 0 50px red, 0 0 60px red, 0 0 70px red, 0 0 80px red, 0 1 90px red;
+   }
+ }
